# demo-stm32-cmake

./: .gitmodules  LICENSE  README.md
cmake/stm32/: common.cmake
stm32f0xx/01-default/: CMakeLists.txt  main.cpp
stm32f0xx/02-semihosting/: CMakeLists.txt  main.cpp
stm32f0xx/03-blink/: 03-blink.ioc  CMakeLists.txt  Makefile
stm32f0xx/03-blink-ll/: 03-blink-ll.ioc  CMakeLists.txt  Makefile
stm32f0xx/04-gpio/: 04-gpio.ioc  CMakeLists.txt  Makefile
stm32f0xx/04-gpio/Core/: CMakeLists.txt
stm32f0xx/04-gpio/Core/Src/: stm32f0xx_it.c
stm32f0xx/05-usart/: .clang-tidy  05-usart.ioc  CMakeLists.txt  Makefile
stm32f0xx/06-i2c/: 06-i2c.ioc  CMakeLists.txt  Makefile
stm32f0xx/12-rtc/: 12-rtc.ioc  CMakeLists.txt  Makefile
stm32f0xx/ethernet-1-enc28j60-microtechnics/: ethernet-1-enc28j60-microtechnics.ioc
stm32f0xx/ethernet-2-data-exchange-microtechnics/: CMakeLists.txt  ethernet-2-data-exchange-microtechnics.ioc
stm32f0xx/ethernet-3-arp-microtechnics/: ethernet-3-arp-microtechnics.ioc
stm32f0xx/ethernet-4-ip-icmp/: README.md  STM32F030R8Tx_FLASH.ld  ethernet-4-ip-icmp.ioc
stm32f0xx/etl-default/: CMakeLists.txt
stm32f0xx/github-cpq/step-2-systick/: .mxproject  CMakeLists.txt  Makefile  step-2-systick.ioc
stm32f0xx/github-cpq/step-2-systick/Core/Inc/: main.h
stm32f0xx/github-cpq/step-2-systick/Core/Src/: gpio.c  main.c
stm32f0xx/github-cpq/step-2-systick/cmake/: gcc-arm-none-eabi.cmake
stm32f0xx/github-cpq/step-2-systick/src/: main.cpp
stm32f0xx/i2c-bmp180/: CMakeLists.txt  Makefile  i2c-bmp180.ioc
stm32f0xx/i2c-lm75/: CMakeLists.txt  Makefile  i2c-lm75.ioc
stm32f0xx/i2c-ssd1306/: CMakeLists.txt  Makefile  STM32F030R8Tx_FLASH.ld  i2c-ssd1306.ioc
stm32f0xx/regex/: CMakeLists.txt  main.cpp
stm32f0xx/rtt-default/: CMakeLists.txt  SEGGER_RTT_Conf.h  STM32F030R8Tx_FLASH.ld  main.cpp  stm32f0xx_hal_conf.h
stm32f0xx/rtt-default/RTT/: CMakeLists.txt
stm32f1xx/01-default/: CMakeLists.txt  main.cpp  scheme.pdsprj  stm32f1xx_hal_conf.h  syscalls.c  uart.cpp  xprintf.h
stm32f1xx/02-semihosting/: CMakeLists.txt  main.cpp
stm32f1xx/03-blink/: .gitmodules  03-blink.ioc  CMakeLists.txt  Makefile
stm32f1xx/03-blink-ll/: 03-blink-ll.ioc  CMakeLists.txt  Makefile
stm32f1xx/04-gpio/: 04-gpio.ioc  CMakeLists.txt  Makefile  STM32F103C8Tx_FLASH.ld
stm32f1xx/05-usart/: 05-usart.ioc  CMakeLists.txt  Makefile  scheme.pdsprj
stm32f1xx/06-i2c/: .gitignore  06-i2c.ioc  CMakeLists.txt  Makefile
stm32f1xx/12-rtc/: 12-rtc.ioc  CMakeLists.txt  Makefile
stm32f1xx/cmsis-01-default/: CMakeLists.txt  main.c
stm32f1xx/cmsis-01-default/cmake/: gcc-arm-none-eabi.cmake
stm32f1xx/cmsis-02-semihosting/: CMakeLists.txt  cmsis-02-semihosting.pdsprj  main.c
stm32f1xx/cmsis-03-blink-ll/: CMakeLists.txt  STM32F103C6Tx_FLASH.ld  cmsis-03-blink-ll.pdsprj  main.c
stm32f1xx/ethernet-1-enc28j60-microtechnics/: ethernet-1-enc28j60-microtechnics.ioc
stm32f1xx/ethernet-2-data-exchange-microtechnics/: CMakeLists.txt  README.md  ethernet-2-data-exchange-microtechnics.ioc
stm32f1xx/ethernet-3-arp-microtechnics/: README.md  ethernet-3-arp-microtechnics.ioc
stm32f1xx/ethernet-4-ip-icmp/: ethernet-4-ip-icmp.ioc
stm32f1xx/etl-default/: CMakeLists.txt
stm32f1xx/i2c-lm75/: CMakeLists.txt  Makefile  i2c-lm75.ioc
stm32f1xx/i2c-pcf8574-lcd1602/: CMakeLists.txt  Makefile  i2c-pcf8574-lcd1602.ioc
stm32f1xx/i2c-pcf8574-lcd1602/Core/: CMakeLists.txt
stm32f1xx/i2c-pcf8574-lcd1602/Core/Src/: i2c.c  main.c  stm32f1xx_hal_msp.c
stm32f1xx/i2c-pcf8574-lcd1602/User/Src/: program.cpp
stm32f1xx/i2c-pcf8574-lcd1602/pcf8574-afiskon/: CMakeLists.txt  pcf8574.c  pcf8574.h
stm32f1xx/i2c-ssd1306/: CMakeLists.txt  Makefile  i2c-ssd1306.ioc
stm32f1xx/i2c-ssd1306-microtechnics/: CMakeLists.txt  Makefile  i2c-ssd1306-microtechnics.ioc
stm32f1xx/modm-blink/: .gitignore  CMakeLists.txt  lbuild.xml  main.cpp  project.xml  scheme.pdsprj
stm32f1xx/modm-blink/cmake/: gcc-arm-none-eabi.cmake
stm32f1xx/onewire-ds18b20/: CMakeLists.txt  SysTimer.c  SysTimer.h  USART_OWire.c  USART_OWire.h  main.c  onewire-ds18b20.pdsprj  startup_stm32f10x_ld.S
stm32f1xx/regex/: CMakeLists.txt  main.cpp
stm32f1xx/rtt-default/: CMakeLists.txt  STM32F103C8Tx_FLASH.ld  main.cpp
stm32f1xx/spi-enc28j60-uip-modbustcp/: .gitignore  CMakeLists.txt  stm32_uip.dep  stm32_uip.ewd  stm32_uip.ewp  stm32_uip.ewt
stm32f4xx/01-default/: CMakeLists.txt  main.cpp  scheme.pdsprj
stm32f4xx/02-semihosting/: CMakeLists.txt  main.cpp
stm32f4xx/03-blink/: 03-blink.ioc  CMakeLists.txt  Makefile
stm32f4xx/03-blink-ll/: 03-blink-ll.ioc  CMakeLists.txt  Makefile
stm32f4xx/03-blink-ll/Core/: CMakeLists.txt
stm32f4xx/03-blink-ll/Core/Inc/: main.h  stm32f4xx_it.h
stm32f4xx/03-blink-ll/Core/Src/: gpio.c  main.c  stm32f4xx_it.c
stm32f4xx/03-blink-ll/User/Src/: program.cpp
stm32f4xx/04-gpio/: 04-blink.ioc  CMakeLists.txt  Makefile
stm32f4xx/05-usart/: 05-usart.ioc  CMakeLists.txt  Makefile
stm32f4xx/06-i2c/: 06-i2c.ioc  CMakeLists.txt  Makefile  STM32F407VGTx_FLASH.ld
stm32f4xx/12-rtc/: 12-rtc.ioc  CMakeLists.txt  Makefile
stm32f4xx/doom/: CMakeLists.txt
stm32f4xx/doom/chocdoom/: CMakeLists.txt
stm32f4xx/doom/cmsis/: CMakeLists.txt
stm32f4xx/doom/device/: CMakeLists.txt
stm32f4xx/doom/device/linker/: STM32F429ZITx_FLASH.ld
stm32f4xx/doom/driver/: CMakeLists.txt
stm32f4xx/doom/fatfs/: CMakeLists.txt
stm32f4xx/doom/usbhost/: CMakeLists.txt
stm32f4xx/doom/user/: CMakeLists.txt
stm32f4xx/ethernet-1-enc28j60-microtechnics/: .clang-format  CMakeLists.txt  ethernet-1-enc28j60-microtechnics.ioc
stm32f4xx/ethernet-3-arp-microtechnics/: README.md  (+1 more)
stm32f4xx/etl-default/: CMakeLists.txt
stm32f4xx/etl-default/src/: CMakeLists.txt  main.cpp
stm32f4xx/i2c-iks01a2-mems1-datalogfusion/MEMS/: CMakeLists.txt
stm32f4xx/i2c-iks01a2-mems1-datalogfusion/MEMS/App/: app_mems.c  app_mems.h
stm32f4xx/i2c-lm75/Qfplib/: CMakeLists.txt  SConscript
stm32h7xx/02-semihosting/: CMakeLists.txt  STM32H743XIHX_FLASH.ld  main.cpp
tools/: fetch_svd.cmake  install_toolchain_win_scoop.cmd  stm32_utils.cmake
(+432 files in other folders)
